Increment over the configuration of the mvn-site-plugin